--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+#
+# JDBC Properties
+#
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory
+spring.datasource.username=developer
+spring.datasource.password=1234567
 
+#
+# Log JDBC SQL statements
+#
+# Only use this for dev/testing
+# DO ONLY use for PRODUCTION since it will log user names
+logging.level.org.springframework.jdbc.core=TRACE
